--- a/style.css
+++ b/style.css
@@ -13,23 +13,74 @@ ul { padding-left: 1.4em; list-style:square; }
 q:before, q:after { content:''; }
 /* End reset csss */
 
+
+@font-face
+{
+    font-family: "Tech";
+    src: url("ShareTech-Regular.ttf");
+}
+body
+{
+    text-align: center;
+    background: rgb(207, 205, 205);
+}
+audio{
+    position: relative;
+    left:330px;
+    bottom: 150px;
+}
+h1{
+    font-size: 60px;
+    color: rgb(152, 200, 216);
+    text-shadow: 5px 5px rgb(9, 9, 90);
+    font-family: "Tech", Arial, Helvetica, sans-serif;
+    background: gray;
+    border-bottom: 10px solid rgb(185, 174, 174);
+    box-shadow: 0 5px 20px black;
+}
+.h-image
+{
+    position: relative;
+    width: 50px;
+    height: 50px;
+    right: 48%;
+    bottom: 65px;
+}
 .robot
 {
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
+    opacity: 0.5;
 }
 .robot-2
 {
     display:none;
-   
 }
 
 p
 {
     z-index: 2;
 }
+#scenario
+{
+    position: relative;
+    top: 100px;
+    right: 136px;
+}
 @media (max-width: 500px)
 {
+    h1
+    {
+        font-size: 40px;
+    }
+    .h-image
+    {
+
+        width: 30px;
+        height: 30px;
+        bottom: 50px;
+        right: 45%;
+    }
     .robot
     {
         display: none;
@@ -40,5 +91,6 @@ p
         display: block;
         width: 100%;
         height: 100%;
+        opacity: 0.5;
     }
 }
